# fusc

./: .gitignore  .travis.yml  Fuspel-Compiler.cabal  default.nix
nix/: default.nix
src/: Main.hs
src/Fuspel/: AST.hs  Language.hs  Lexer.hs  Parser.hs
test/: Test.hs
test/testfiles/: test.fusp
