name:                Fuspel-Compiler

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- https://wiki.haskell.org/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0
license:             GPL-2
license-file:        LICENSE
author:              Erin van der Veen
maintainer:          erinvanderveen@outlook.com
copyright:           Erin van der Veen
category:            Language
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable fusc
  main-is:             Main.hs
  other-extensions:    LambdaCase
  build-depends:       base >=4.9 && <4.10,
                       parsec >=3.1 && <3.2,
                       mtl >=2.2 && <2.3
  hs-source-dirs:      src
  default-language:    Haskell2010
