name:                fuspel-compiler

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- https://wiki.haskell.org/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0
license:             GPL-2
license-file:        LICENSE
author:              Erin van der Veen
maintainer:          erinvanderveen@outlook.com
copyright:           Erin van der Veen
category:            Language
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10
synopsis:            A compiler for the Fuspel language
description:         A compiler for the Fuspel language that makes use of LLVM.
                     The language is compiled to LLVM-IR, and then optimized
                     and linked using the LLVM framework.

source-repository head
  type:     git
  location: https://github.com/ErinvanderVeen/fusc.git

executable fusc
  main-is:             Main.hs
  other-extensions:    ScopedTypeVariables
  build-depends:       base,
                       parsec,
                       mtl
  hs-source-dirs:      src
  default-language:    Haskell2010
  other-modules:       Fuspel.AST,
                       Fuspel.Language,
                       Fuspel.Lexer,
                       Fuspel.Parser

library
  hs-source-dirs:      src
  other-extensions:    ScopedTypeVariables
  default-language:    Haskell2010
  exposed-modules:     Fuspel.Parser,
                       Fuspel.AST,
                       Fuspel.Lexer,
                       Fuspel.Language
  build-depends:       base,
                       parsec,
                       mtl

test-suite tests
  main-is:             Test.hs
  type:                exitcode-stdio-1.0
  other-extensions:    ScopedTypeVariables
  build-depends:       base,
                       parsec,
                       tasty,
                       tasty-hunit,
                       directory,
                       fuspel-compiler
  hs-source-dirs:      test
  default-language:    Haskell2010
